--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4920,6 +4920,82 @@
         "th":"",
         "id":""
     },
+    "UI.windows.daily_recommended.tab.daily":{
+        "en":"Daily",
+        "fr":"Quotidien",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.daily_recommended.tab.growth":{
+        "en":"Growth",
+        "fr":"Progression",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.daily_recommended.tab.online-events":{
+        "en":"Online Events",
+        "fr":"Évenements en ligne",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.daily_recommended.tab.event-today":{
+        "en":"Events Today",
+        "fr":"Évenements Aujourd'hui",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.crossserver.title":{
         "en":"Cross Server Battlefield",
         "fr":"Arène inter serveur",
