--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4996,6 +4996,101 @@
         "th":"",
         "id":""
     },
+    "UI.windows.daily_recommended.zeal-today":{
+        "en":"Zeal Today",
+        "fr":"Zeal Aujourd'hui",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.daily_recommended.zeal-reward":{
+        "en":"Zeal Reward",
+        "fr":"Récompense de Zeal",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.daily_recommended.zeal-required":{
+        "en":"Zeal Req",
+        "fr":"Zeal Requis",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.daily_recommended.zeal-reward.incomplete":{
+        "en":"Imcomplete",
+        "fr":"Imcomplet",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.daily_recommended.zeal-reward.incomplete":{
+        "en":"Imcomplete",
+        "fr":"Imcomplet",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.crossserver.title":{
         "en":"Cross Server Battlefield",
         "fr":"Arène inter serveur",
