--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -5091,6 +5091,82 @@
         "th":"",
         "id":""
     },
+    "UI.windows.daily_recommended.zeal-reward.rank1":{
+        "en":"Great, keep trying to get 7 stars!",
+        "fr":"Super, continuez d'essayer d'obtenir 7 étoiles!",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.daily_recommended.zeal-reward.rank2":{
+        "en":"Great, almost 9 stars!",
+        "fr":"Super, presque 9 étoiles!",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.daily_recommended.zeal-reward.rank3":{
+        "en":"You're almost done, keep up the good work!",
+        "fr":"Vous avez presque terminé, continuez cet excelent travail!",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.daily_recommended.zeal-reward.rank4":{
+        "en":"Well done! Congrats! You will get all the chest rewards!",
+        "fr":"Bien joué! Félicitations! Vous obtiendrez touts les coffres en récompense!",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.crossserver.title":{
         "en":"Cross Server Battlefield",
         "fr":"Arène inter serveur",
