--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -5054,8 +5054,8 @@
         "id":""
     },
     "UI.windows.daily_recommended.zeal-reward.incomplete":{
-        "en":"Imcomplete",
-        "fr":"Imcomplet",
+        "en":"Incomplete",
+        "fr":"Incomplet",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
