--- a/Translation/item.json
+++ b/Translation/item.json
@@ -12972,8 +12972,8 @@
         "id":""
     },
     "item.41004.name":{
-        "en":"Talent Gem",
-        "fr":"Gemme de Talent",
+        "en":"Elemental Gem",
+        "fr":"Gemme Élementaire",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -12983,7 +12983,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Ngọc Thiên Phú",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
