--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4932,7 +4932,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hàng Ngày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4951,7 +4951,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tăng Trưởng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4970,7 +4970,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hoạt Động Trực Tuyến",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4989,7 +4989,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hoạt Động Hôm Nay",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5008,7 +5008,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Zeal Hôm Nay",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5027,7 +5027,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Zeal Phẩn Thưởng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5046,7 +5046,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Zeal Yêu Cầu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5065,7 +5065,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chưa Hoàn Thành",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5084,7 +5084,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tuyệt, cứ cố gắng để đạt được 7 sao nhé!",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5103,7 +5103,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tốt, sắp 9 sao rồi đó!",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5122,7 +5122,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bạn sắp hoàn thành rồi, hãy tiếp tục phát huy!",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5141,7 +5141,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Làm tốt lắm! Chúc mừng nha! Bạn sẽ nhận được toàn bộ rương phần thưởng!",
         "ar":"",
         "it":"",
         "pl":"",
