--- a/Translation/general.json
+++ b/Translation/general.json
@@ -1455,7 +1455,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1474,7 +1474,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đã Nhận",
         "ar":"",
         "it":"",
         "pl":"",
