--- a/Translation/item.json
+++ b/Translation/item.json
@@ -11596,7 +11596,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động I Cấp 1-30",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11615,7 +11615,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động II Cấp 1-30",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11634,7 +11634,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động III Cấp 1-30",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11653,7 +11653,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động IV Cấp 1-30",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11672,7 +11672,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động I Cấp 40",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11691,7 +11691,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động II Cấp 40",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11710,7 +11710,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động III Cấp 40",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11729,7 +11729,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động IV Cấp 40",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11748,7 +11748,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động I Cấp 50",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11767,7 +11767,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động II Cấp 50",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11786,7 +11786,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động III Cấp 50",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11805,7 +11805,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động IV Cấp 50",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11824,7 +11824,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động I Cấp 60",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11843,7 +11843,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động II Cấp 60",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11862,7 +11862,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động III Cấp 60",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11881,7 +11881,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động IV Cấp 60",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11900,7 +11900,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động I Cấp 70",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11919,7 +11919,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động II Cấp 70",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11938,7 +11938,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động III Cấp 70",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11957,7 +11957,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động IV Cấp 70",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11976,7 +11976,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động I Cấp 80",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11995,7 +11995,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động II Cấp 80",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12014,7 +12014,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động III Cấp 80",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12033,7 +12033,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động IV Cấp 80",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12052,7 +12052,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động I Cấp 90",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12071,7 +12071,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động II Cấp 90",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12090,7 +12090,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động III Cấp 90",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12109,7 +12109,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động IV Cấp 90",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12128,7 +12128,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động I Cấp 100",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12147,7 +12147,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động II Cấp 100",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12166,7 +12166,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động III Cấp 100",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12185,7 +12185,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động IV Cấp 100",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12204,7 +12204,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động I Cấp 110",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12223,7 +12223,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động II Cấp 110",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12242,7 +12242,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động III Cấp 110",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12261,7 +12261,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động IV Cấp 110",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12280,7 +12280,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động I Cấp 120",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12299,7 +12299,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động II Cấp 120",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12318,7 +12318,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động III Cấp 120",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12337,7 +12337,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động IV Cấp 120",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12356,7 +12356,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động I Cấp 130",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12375,7 +12375,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động II Cấp 130",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12394,7 +12394,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động III Cấp 130",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12413,7 +12413,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động IV Cấp 130",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12432,7 +12432,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động I Cấp 140",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12451,7 +12451,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động II Cấp 140",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12470,7 +12470,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động III Cấp 140",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12489,7 +12489,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động IV Cấp 140",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12508,7 +12508,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động I Cấp 150",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12527,7 +12527,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động II Cấp 150",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12546,7 +12546,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động III Cấp 150",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12565,7 +12565,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Hoạt Động IV Cấp 150",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12983,7 +12983,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngọc Nguyên Tố",
         "ar":"",
         "it":"",
         "pl":"",
